# Stock_price_prediction

./: README.md  pyproject.toml
app/: config.py  exceptions.py  main.py  model.py  pipeline.py  predictor.py  utils.py
frontend/: index.html  script.js  style.css
