[project]
name = "stock-price"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "h5py>=3.16.0",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "tensorflow>=2.20.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
    "yfinance>=1.5.1",
]
